# Asthma_Risk_System_Vercel

Asthma_Risk_System_Vercel/: index.html  pyproject.toml  requirements.txt  vercel.json
Asthma_Risk_System_Vercel/api/: index.py
Asthma_Risk_System_Vercel/api/templates/: index.html
